# replay-parser-2

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.en.md  README.md  clippy.toml  docker-compose.worker-smoke.yml  rustfmt.toml  skills-lock.json
.agents/: gsd-file-manifest.json  gsd-install-state.json
.agents/agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.agents/commands/gsd/: add-tests.md  ai-integration-phase.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  capture.md  cleanup.md  code-review.md  complete-milestone.md  config.md  debug.md  discuss-phase.md  docs-update.md  eval-review.md  execute-phase.md  explore.md  extract-learnings.md  fast.md  forensics.md  graphify.md  health.md  (+37 more)
.agents/gsd-migration-journal/: 2026-06-07T17-07-21-674Z-c24ec9eda51117d3.json
.cargo/: config.toml
.claude/skills/: solidstats-parser-rust-code-review  solidstats-parser-rust-conventions  solidstats-parser-rust-tests
.github/workflows/: cd.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  golden-container-e2e-oracle-BRAINSTORM.md  v1.0-MILESTONE-AUDIT.md  v1.0-MILESTONE-GAP-PLAN.md
.planning/benchmarks/: phase-05-all-raw-accepted-failures.json  phase-05-old-all-raw-baseline.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/graphs/: .graphify_labels.json  GRAPH_COMMUNITIES.md  GRAPH_REPORT.md
.planning/intel/: .last-refresh.json  api-map.json  arch-decisions.json  dependency-graph.json  file-roles.json  stack.json
.planning/milestones/: DEEP-BRAINSTORM.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-SIZING.md
.planning/quick/: 260511-infra-owned-deploy.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
coverage/: allowlist.toml
crates/parser-cli/: Cargo.toml
crates/parser-cli/src/: main.rs
crates/parser-cli/tests/: compare_command.rs  parse_command.rs  schema_command.rs  worker_command.rs
crates/parser-contract/: Cargo.toml
crates/parser-contract/examples/: export_schema.rs  export_worker_schemas.rs  parse_artifact_success.v1.json  parse_artifact_success.v2.json  parse_artifact_success.v3.json  parse_completed.v1.json  parse_failed.v1.json  parse_failure.v1.json  parse_failure.v2.json  parse_failure.v3.json  parse_job.v1.json
crates/parser-contract/src/: aggregates.rs  artifact.rs  compact.rs  diagnostic.rs  events.rs  failure.rs  identity.rs  lib.rs  metadata.rs  minimal.rs  presence.rs  schema.rs  side_facts.rs  source_ref.rs  version.rs  worker.rs
crates/parser-contract/tests/: aggregate_contract.rs  artifact_envelope.rs  combat_event_contract.rs  failure_contract.rs  metadata_identity_contract.rs  replay_side_facts_contract.rs  schema_contract.rs  source_ref_contract.rs  version_contract.rs  worker_message_contract.rs
crates/parser-core/: Cargo.toml
crates/parser-core/src/: aggregates.rs  artifact.rs  debug_artifact.rs  diagnostics.rs  entities.rs  events.rs  input.rs  legacy_player.rs  lib.rs  metadata.rs  raw.rs  raw_compact.rs  side_facts.rs  vehicle_score.rs
crates/parser-core/tests/: aggregate_projection.rs  combat_event_semantics.rs  debug_artifact.rs  deterministic_output.rs  entity_normalization.rs  fault_injection_regressions.rs  golden_artifact_bytes.rs  golden_fixture_behavior.rs  golden_fixture_manifest.rs  legacy_entity_compatibility.rs  metadata_normalization.rs  parser_core_api.rs  raw_event_accessors.rs  schema_drift_status.rs  side_facts.rs  vehicle_score.rs
crates/parser-core/tests/common/: golden_identity.rs
crates/parser-core/tests/fixtures/: aggregate-combat.ocap.json  combat-events.ocap.json  connected-backfill.ocap.json  diagnostic-cap.ocap.json  duplicate-slot-same-name.ocap.json  entities-drift.ocap.json  entities-mixed-unsorted.ocap.json  invalid-json.ocap.json  killed-events.ocap.json  metadata-drift.ocap.json  side-facts.ocap.json  valid-minimal.ocap.json  vehicle-score.ocap.json
crates/parser-core/tests/fixtures/golden/: README.md  manifest.json
crates/parser-core/tests/fixtures/golden/expected/: real-large-success.expected.json  real-mid-success.expected.json  real-partial-schema-drift.expected.json  real-small-success.expected.json  valid-minimal.expected.json
crates/parser-harness/: Cargo.toml
crates/parser-harness/benches/: parser_pipeline.rs
crates/parser-harness/src/: benchmark_report.rs  comparison.rs  coverage.rs  fault_report.rs  lib.rs  report.rs  summary_report.rs
crates/parser-harness/tests/: benchmark_report.rs  comparison_report.rs  coverage_gate.rs  fault_report_gate.rs
crates/parser-quality/: Cargo.toml
crates/parser-quality/src/: coverage.rs  fault_report.rs  lib.rs
crates/parser-quality/tests/: coverage_gate.rs  fault_report_gate.rs
crates/parser-worker/: Cargo.toml
crates/parser-worker/src/: amqp.rs  artifact_key.rs  checksum.rs  config.rs  error.rs  health.rs  lib.rs  logging.rs  processor.rs  runner.rs  shutdown.rs  storage.rs
crates/parser-worker/tests/: amqp.rs  artifact_key.rs  config.rs  golden_container_e2e.rs  health.rs  live_smoke.rs  log_taxonomy.rs  processor.rs  shutdown.rs  storage.rs
crates/parser-worker/tests/common/: mod.rs
docs/: parser-reference.md
gsd-briefs/: README.md  replay-parser-2.md  replays-fetcher.md  replays-parser-2.md  server-2.md  v2-backend-parity-and-full-run.md  web.md
schemas/: parse-artifact-v1.schema.json  parse-artifact-v3.schema.json  parse-job-v1.schema.json  parse-result-v1.schema.json
scripts/: benchmark-phase5.sh  capture-golden-replays.sh  cargo-budget.sh  compare-year-edge-sample.py  coverage-gate.sh  fault-report-gate.sh  prune-cargo-target.sh  worker-smoke.sh
(+396 files in other folders)
