[workspace]
resolver = "3"
members = ["crates/parser-contract"]

[workspace.package]
edition = "2024"
rust-version = "1.95.0"
license = "UNLICENSED"
description = "Deterministic Rust parser workspace for SolidGames OCAP replay artifacts."
repository = "https://github.com/solid-stats/sg-replay-parser-2"
readme = "README.md"
keywords = ["solidgames", "ocap", "parser", "replays", "stats"]
categories = ["parser-implementations", "command-line-utilities"]

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "deny"
ambiguous_negative_literals = "deny"
closure_returning_async_block = "deny"
deprecated_in_future = "deny"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "deny"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
let_underscore = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
non_ascii_idents = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unstable_features = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
unused_results = "deny"
warnings = { level = "deny", priority = -1 }

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
as_conversions = "deny"
cargo = { level = "deny", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
float_cmp = "deny"
integer_division = "deny"
nursery = { level = "deny", priority = -1 }
panic = "deny"
pedantic = { level = "deny", priority = -1 }
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
wildcard_imports = "deny"
