[package]
name = "parser-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "replay-parser-2"
path = "src/main.rs"

[dependencies]
parser-contract = { path = "../parser-contract" }
parser-core = { path = "../parser-core" }
parser-harness = { path = "../parser-harness" }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2"

[lints]
workspace = true
