[package]
name = "parser-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
parser-contract = { path = "../parser-contract" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2"

[dev-dependencies]
# Gunzip the committed real-corpus golden fixtures (gzip-at-rest) at test time.
# Default `rust_backend` (pure-Rust miniz) — no C toolchain / system zlib dependency.
flate2 = "1.1.9"

[lints]
workspace = true
