[package]
name = "parser-harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
parser-contract = { path = "../parser-contract" }
parser-core = { path = "../parser-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser_pipeline"
harness = false

[lints]
workspace = true
