[package]
name = "parser-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
parser-contract = { path = "../parser-contract" }
parser-core = { path = "../parser-core" }
aws-config = "1"
aws-sdk-s3 = "1"
futures-util = "0.3"
hex = "0.4"
lapin = "4"
percent-encoding = "2"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[lints]
workspace = true
